fix: app toolbar on top without double scrollbar when mat-drawer-content is higher then screen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,14 @@
 main {
   padding: 1em 1.5em 2em 1.3em;
+  overflow-y: auto;
+}
+
+.app-container {
+  height: 100%;
+}
+
+.app-toolbar {
+  min-height: 64px;
 }
 
 .sidenav--icon__margin {
@@ -10,4 +19,3 @@ main {
   text-decoration: none;
   color: inherit;
 }
-
